# Zeta

./: .editorconfig  .gitignore  AUTHORS  CMakeLists.txt  HISTORY  LICENSE  README  README.md
.github/: pull_request_template.md
API/C++/Z/macros/: language.hpp  type selection.hpp
API/C++/Z/traits/: SelectType.hpp  TernaryType.hpp  Type.hpp  TypeCount.hpp  TypeList.hpp  base.hpp  filtering.hpp  mathematics.hpp
API/C++/Z/types/: base.hpp
API/C/Z/constants/: numbers.h  version.h
API/C/Z/inspection/: C++.h  C.h  CPU.h  OS.h  Objective-C.h  character set.h  compiler.h  data model.h  floating-point.h  language.h
API/C/Z/keys/: C++.h  OS.h  Objective-C.h  compiler.h  data model.h  endianness.h  language.h  program.h  status.h  text.h  value.h
API/C/Z/macros/: arguments.h  casting.h  character.h  date.h  language.h  members.h  pasting.h  repetition.h  slot.h  templating.h  tokens.h  value.h  variadic selection.h  variadic.h  version.h
API/C/Z/types/: arguments.h  base.h  buffering.h  data.h  generic functions.h  mathematics.h  time.h
API/Z/: version.h
API/Z/ABIs/generic/: allocation.h  allocator.h  cipher.h  data codec.h  emulation.h  hash function.h  module.h  wave codec.h
API/Z/classes/: AABB.hpp  AABR.hpp  Any.hpp  Auto.hpp  Box.hpp  Circle.hpp  Empty.hpp  Functor.hpp  InitializerList.hpp  Iterator.hpp  Line2D.hpp  Line3D.hpp  MemberFunction.hpp  NaT.hpp  ObjectMemberFunction.hpp  ObjectSelector.hpp  OpaqueFunctionPointer.hpp  OpaqueMemberFunctionPointer.hpp  Optional.hpp  Pair.hpp  Range.hpp  Rectangle.hpp  Reference.hpp  RingBuffer.hpp  Selector.hpp  Shared.hpp  SizedString.hpp  Span.hpp  Status.hpp  Strid.hpp  StringView.hpp  Symbol.hpp  TripleBuffer.hpp  Tuple.hpp  Unique.hpp  Weak.hpp  XY.hpp  XYZ.hpp
API/Z/classes/base/: InitializerList.hpp  OpaqueFunctionPointer.hpp  OpaqueMemberFunctionPointer.hpp  Pair.hpp  Range.hpp  SizedString.hpp  Status.hpp  Symbol.hpp  Tuple.hpp  Value2D.hpp  Value3D.hpp
API/Z/classes/buffering/: RingBuffer.hpp  TripleBuffer.hpp
API/Z/classes/functional/: Functor.hpp  MemberFunction.hpp  ObjectMemberFunction.hpp  ObjectSelector.hpp  Selector.hpp
API/Z/classes/memory/: Shared.hpp
API/Z/constants/: base.h  boolean.h  build.hpp  chemical elements.h  numbers.h  pointer.h  version.h
API/Z/constants/science/: chemical elements.h
API/Z/formats/archive/: TAR.h  ZIP.h
API/Z/formats/character set/: ASCII.h  DOS CP437.h  DOS CP737.h  DOS CP775.h  DOS CP850.h  DOS CP852.h  DOS CP855.h  DOS CP857.h  DOS CP858.h  DOS CP860.h  DOS CP861.h  DOS CP862.h  DOS CP863.h  DOS CP864.h  DOS CP865.h  DOS CP866.h  DOS CP869.h  DOS CP872.h  DOS CP874.h  Unicode.h  hash.rb
API/Z/formats/character_set/: ASCII.h  DOS_CP437.h  DOS_CP737.h  DOS_CP775.h  DOS_CP850.h  DOS_CP852.h  DOS_CP855.h  DOS_CP857.h  DOS_CP858.h  DOS_CP860.h  DOS_CP861.h  DOS_CP862.h  DOS_CP863.h  DOS_CP864.h  DOS_CP865.h  DOS_CP866.h  DOS_CP869.h  DOS_CP872.h  DOS_CP874.h
API/Z/formats/data model/: I16LP32.h  ILP32.h  ILP64.h  IP16L32.h  LLP64.h  LP32.h  LP64.h  SILP64.h
API/Z/formats/data_model/: I16LP32.h  ILP32.h  ILP64.h  IP16L32.h  LLP64.h  LP32.h  LP64.h  SILP64.h
API/Z/formats/file system/: FAT12.h
API/Z/formats/floating-point/: Brain Floating-Point.h  Brain_Floating-Point.h  IBM.h  IEEE 754.h  IEEE_754.h  PowerPC.h  x87.h
API/Z/formats/image/: ICNS.h
API/Z/formats/keymap/: Mac OS.h  Mac_OS.h  USB.h  Z.h
API/Z/formats/multimedia/: Creative Voice.h  Microsoft Wave.h
API/Z/functions/: Objective-C.hpp  Z2D.h  Z2DLine.h  Z3D.h  Z3DLine.h  ZAABB.h  ZAABR.h  ZBox.h  ZCircle.h  ZRange.h  ZRectangle.h  ZRingBuffer.h  ZSphere.h  ZTripleBuffer.h  atomic.h  bitwise.h  buffer.h  buffering.h  calendar.h  casting.hpp  character.h  class.hpp  date.h  hash.hpp  math.h  math.hpp  mathematics.h  mathematics.hpp  structure.hpp  type.hpp  unevaluated.hpp
API/Z/functions/base/: Z2D.h  Z3D.h  ZRange.h  all.h  type.hpp  (+6 more)
API/Z/inspection/: C++.h  C.h  CPU.h  ISA.h  OS.h  Objective-C.h  Z.h  build.h  character set.h  character_set.h  compiler.h  data model.h  data_model.h  floating-point.h  language.h  platform.h
API/Z/keys/: C++.h  C.h  CPU.h  ISA.h  OS.h  Objective-C.h  character set.h  chemistry.h  compiler.h  data model.h  data_model.h  endianness.h  fundamental.h  language.h  layout.h  number.h  order.h  platform.h  program.h  status.h  text.h  type.h  value.h
API/Z/macros/: T.h  aggregate.h  arguments.h  array.h  bit-field.h  bitwise.h  calendar.h  casting.h  character.h  control.h  date.h  hash.h  iteration.h  key.h  language.h  language.hpp  math.h  mathematics.h  member.h  members.h  node.h  pasting.h  pointer.h  repetition.h  structure.h  templating.h  token.h  tokens.h  type enumeration.h  type selection.hpp  type.h  type.hpp  value.h  variadic control.h  variadic pasting.h  variadic selection.h  variadic.h  variadic_control.h  variadic_pasting.h  version.h
API/Z/traits/: SelectType.hpp  TernaryType.hpp  Type.hpp  TypeCount.hpp  TypeList.hpp  ValueList.hpp  base.hpp  casting.hpp  constants.hpp  control.hpp  filtering.hpp  math.hpp  mathematics.hpp  type.hpp
API/Z/types/: arguments.h  base.h  base.hpp  bitwise.h  bitwise.hpp  buffer.h  buffering.h  complex.h  data.h  dimensional.h  fundamental.h  fundamental.hpp  generic functions.h  geometry.h  imaginary.h  integral.h  integral.hpp  mathematics.h  pointer.hpp  real.h  real.hpp  sectional.h  segmental.h  time.h
CMake/: FindBreathe.cmake  FindSphinx.cmake
Z.Kit/v0.1/scripts/: Z  create-qt-creator-project.rb  update-qt-creator-project.rb
development/Qt Creator/: .gitignore  Z.pro
development/build-Z-Desktop-Debug/: Makefile
distribution/CocoaPods/: Zeta.podspec
distribution/Gentoo Linux/: Zeta-0.1.ebuild  metadata.xml
distribution/Homebrew/: Zeta.rb
documentation/: APIReference.rst  CMakeLists.txt  CodingStyle.rst  Doxyfile.in  NamingConvention.rst  conf.py  index.rst  installation-from-source-code.rst  license.rst
documentation/APIReference/Inspection/: CharacterSet.rst  Compiler.rst  DataModel.rst  FloatingPoint.rst  ISA.rst  Language.rst  OS.rst  Platform.rst  Z.rst
support/: Zeta.pc.in
(+2264 files in other folders)
